[package]
name = "weldr"
version = "0.4.0"
authors = ["Jerome Humbert"]
description = "A Rust library to manage LDraw files (.ldr)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/djeedai/weldr"
readme = "README.md"
documentation = "https://docs.rs/weldr"
keywords = ["parsing", "ldraw", "lego", "cad"]
categories = ["parser-implementations"]
edition = "2018"
include = [
  "CHANGELOG.md",
  "LICENSE-APACHE2",
  "LICENSE-MIT",
  "README.md",
  "../.gitignore",
  "Cargo.toml",
  "src/*.rs",
  "tests/*.rs"
]

[lib]
name = "weldr"
path = "src/lib.rs"

[dependencies]
nom = "7.1.3"
glam = "0.23.0"
log = "0.4"
base64 = "0.21.0"
